--- a/web/templates/settings.html
+++ b/web/templates/settings.html
@@ -265,8 +265,8 @@
           selected: '{{index . "theme_selected"}}',
           light: '{{index . "theme_light"}}',
           dark: '{{index . "theme_dark"}}',
-          themes: ['garden', 'forest', 'cupcake', 'dracula', 'gamwich'],
-          themeLabels: { garden: 'Garden', forest: 'Forest', cupcake: 'Cupcake', dracula: 'Dracula', gamwich: 'Gamwich' },
+          themes: ['light', 'dark', 'sunny', 'cozy', 'grounded', 'starfall', 'silverglade', 'seamist', 'irondeep', 'horsemark', 'citadel'],
+          themeLabels: { light: 'Light', dark: 'Dark', sunny: 'Sunny', cozy: 'Cozy', grounded: 'Grounded', starfall: 'Starfall', silverglade: 'Silverglade', seamist: 'Seamist', irondeep: 'Irondeep', horsemark: 'Horsemark', citadel: 'Citadel' },
           applyPreview(t) {
               document.documentElement.setAttribute('data-theme', t);
               localStorage.setItem('gamwich_theme', t);
