Add free tier signup flow with setup instructions
Free tier on pricing page now routes through magic link login
to account page, which shows Docker setup instructions for
self-hosted users.

--- a/web/billing/templates/pricing.html
+++ b/web/billing/templates/pricing.html
@@ -44,7 +44,11 @@
                 </li>
             </ul>
             <div class="card-actions justify-center mt-4">
-                <span class="btn btn-ghost btn-sm">Current plan</span>
+                {{if .IsAuthenticated}}
+                <a href="/account" class="btn btn-outline btn-sm w-full">Get Started</a>
+                {{else}}
+                <a href="/login?redirect=/account" class="btn btn-outline btn-sm w-full">Get Started</a>
+                {{end}}
             </div>
         </div>
     </div>
